# claw_tray

./: .gitignore  README.md  general_spec.md
.github/workflows/: build.yml
cpp_launcher/: CMakeLists.txt  Pitfall Avoidance & Best Practices.md  README.md  SPEC.md  build.bat  build_msvc.bat  build_release.bat  main.cpp
cpp_launcher/installer/: setup.iss
cpp_launcher/res/: resource.h  resource.rc
cpp_launcher/src/: AnsiParser.h  Common.h  Config.h  HotkeyManager.h  I18N.h  Logger.h  MainWindow.h  ProcessManager.h  StartupManager.h  TrayIcon.h
python_proto/: README.md  SPEC.md  build.py  config.json  launcher.py  requirements.txt
